fix scrollbar styles

--- a/public/css/layout.scss
+++ b/public/css/layout.scss
@@ -15882,7 +15882,6 @@ section.cities_list_wrapper {
                         border-radius: 8px;
 
                         .simplebar-scrollbar {
-                            height: 64px !important;
                             background: #dc0000;
                             border-radius: 8px;
                         }
